# cpilib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
cpilib/: __init__.py  constants.py
cpilib/cpi/: __init__.py  base_classes.py  fr_cpi.py  hicp.py
cpilib/data/: cpi2015.xls  hicp_labels.csv  hicp_labels.parquet
cpilib/utils/: __init__.py  coicop.py  eurostats.py
