[tool.poetry]
name = "cpilib"
version = "0.2.6"
description = "Library for handling CPI data"
authors = ["Thomas Kientz <thomas@kientz.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
plotly = "^5.15.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"
ipykernel = "^6.23.3"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
fix = true
ignore = ["D100", "D104", "D205", "D200"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    too-many-arguments,
    not-callable,
    missing-module-docstring,
    import-error,
    too-few-public-methods,
    logging-fstring-interpolation,
"""
good-names = "i,j,k,x,y,z,ex,Run,_,e,_E,X,CPI,HICP"

[tool.pylint.MASTER]
ignore-paths = [
    "docs",
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Include the data files in the package
include = ["cpilib/data/*.parquet"]
